--- a/apps/telegram-bot/package.json
+++ b/apps/telegram-bot/package.json
@@ -13,7 +13,11 @@
     "devDependencies": {
         "@local/configs": "workspace:*",
         "@total-typescript/ts-reset": "0.6.1",
+        "@types/adm-zip": "0.5.5",
+        "@types/fluent-ffmpeg": "2.1.26",
+        "@types/fs-extra": "11.0.4",
         "@types/node": "20.12.14",
+        "@types/uuid": "10.0.0",
         "concurrently": "9.0.1",
         "defu": "6.1.4",
         "dotenv-expand": "11.0.6",
@@ -21,7 +25,14 @@
         "typescript": "5.5.4"
     },
     "dependencies": {
+        "@ffmpeg-installer/ffmpeg": "1.1.0",
+        "@ffprobe-installer/ffprobe": "2.1.2",
+        "adm-zip": "0.5.16",
         "dotenv": "16.4.5",
-        "tslib": "2.7.0"
+        "fluent-ffmpeg": "2.1.3",
+        "fs-extra": "11.2.0",
+        "telegraf": "4.16.3",
+        "tslib": "2.7.0",
+        "uuid": "10.0.0"
     }
 }
